--- a/index.css
+++ b/index.css
@@ -1,13 +1,40 @@
 body{
-    display: flex;
-    justify-content: center;
     margin: 0;
     height: 100vh;
     width: 100vw;
     background: linear-gradient(-45deg, #060208, #050205, #060208, #140714, #060208);
-	background-size: 400% 400%;
+	  background-size: 400% 400%;
     animation: gradient 5s ease-in-out infinite;
 }
+
+.screen-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.user-tools{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    z-index: 20;
+    margin-top: 10px;
+}
+
+.user-tools-item{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; 
+}
+
+
+
 
 .noClick {
    pointer-events: none;
@@ -46,7 +73,6 @@ body{
     position: fixed;
     left: 0;
     right: 0;
-    padding-top: 30px;
     font-family:'VT323', monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -54,11 +80,10 @@ body{
 }
 
 .modal-content{
-    padding-top: 30px;
     background-color: black;
     text-align: center;
     width: 420px;
-    height: 780px;
+    height: 720px;
     margin: 0 auto;
 }
 
@@ -71,7 +96,6 @@ body{
     flex-direction: column;
     text-align: center;
     font-family:'VT323', monospace;
-    margin-top: 30px;
     z-index: 0;
 }
 
@@ -131,13 +155,14 @@ button{
 .content{
     animation: glow 4s infinite alternate;
     font-family: 'VT323', monospace;
+    height: 720px;
 } 
 
 .description{
 }
 
 #game{
-    height: 810px;
+    height: 720px;
     width: 420px;
 }
 
